# voicebot-rust

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  README.md  README_JA.md  flake.nix
crates/bot/: Cargo.toml
crates/bot-audio/: Cargo.toml
crates/bot-call/: Cargo.toml
crates/bot-config/: Cargo.toml
crates/bot-config/src/: lib.rs
crates/bot-db/: Cargo.toml
crates/bot-db/src/: voice.rs
crates/bot-speech/: Cargo.toml
crates/bot-speech/src/: speech.rs  voicevox.rs
crates/bot/src/: app_state.rs  autojoin.rs  event_handler.rs  main.rs  time_signal.rs
crates/bot/src/command/: actions.rs  handler.rs  mod.rs  model.rs  parser.rs  setup.rs
crates/bot/src/component_interaction/: handler.rs
crates/bot/src/message/: handler.rs  read.rs
crates/bot/src/voice_state/: handler.rs
deployment/: .env.template  docker-compose.yml  voicebot.service
deployment/config/: voicevox_presets.yaml
devtools/: .release-it.js  package.json
docs/: setup_guide.md  user_guide.md
