[package]
name = "bot-speech"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bot-audio = { path = "../bot-audio" }
anyhow = { version = "1.0.75", features = ["backtrace"] }
serde = { version = "1.0.192", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }

serde_json = "1.0"
