[package]
name = "bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bot-audio = { path = "../bot-audio" }
bot-call = { path = "../bot-call" }
bot-config = { path = "../bot-config" }
bot-db = { path = "../bot-db" }
bot-speech = { path = "../bot-speech" }

# Basics
anyhow = { version = "1.0.75", features = ["backtrace"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }

# Logging
log = "0.4.20"
ecs-logger = "1.1.0"

# Error reporting
sentry = { version = "0.31.8", features = ["anyhow"] }

# Discord
serenity = { version = "0.11.7", default-features = false, features = ["cache", "client", "utils", "voice", "native_tls_backend"] }
songbird = { version = "0.3.2", default-features = false, features = ["serenity-native", "driver"] }
discord-md = "3.0.0"

# Utilities
reqwest = { version = "0.11", features = ["json"] }
dashmap = "5.5.3"
once_cell = "1.18.0"
aho-corasick = "1.1.2"
regex = "1.10.2"
rand = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

